// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`big renders with accessKey="a,b,c,d" 1`] = `
<big
  accessKey="a,b,c,d"
/>
`;

exports[`big renders with autoCapitalize="characters" 1`] = `
<big
  autoCapitalize="characters"
/>
`;

exports[`big renders with autoCapitalize="none" 1`] = `
<big
  autoCapitalize="none"
/>
`;

exports[`big renders with autoCapitalize="off" 1`] = `
<big
  autoCapitalize="off"
/>
`;

exports[`big renders with autoCapitalize="on" 1`] = `
<big
  autoCapitalize="on"
/>
`;

exports[`big renders with autoCapitalize="sentences" 1`] = `
<big
  autoCapitalize="sentences"
/>
`;

exports[`big renders with autoCapitalize="words" 1`] = `
<big
  autoCapitalize="words"
/>
`;

exports[`big renders with children 1`] = `
<big>
  TEST
</big>
`;

exports[`big renders with className="foo bar baz" 1`] = `
<big
  className="foo bar baz"
/>
`;

exports[`big renders with contentEditable="false" 1`] = `
<big
  contentEditable="false"
/>
`;

exports[`big renders with contentEditable="true" 1`] = `
<big
  contentEditable="true"
/>
`;

exports[`big renders with dir="auto" 1`] = `
<big
  dir="auto"
/>
`;

exports[`big renders with dir="ltr" 1`] = `
<big
  dir="ltr"
/>
`;

exports[`big renders with dir="rtl" 1`] = `
<big
  dir="rtl"
/>
`;

exports[`big renders with draggable="false" 1`] = `
<big
  draggable="false"
/>
`;

exports[`big renders with draggable="true" 1`] = `
<big
  draggable="true"
/>
`;

exports[`big renders with empty attributes 1`] = `<big />`;

exports[`big renders with hidden="false" 1`] = `
<big
  hidden={false}
/>
`;

exports[`big renders with hidden="true" 1`] = `
<big
  hidden={true}
/>
`;

exports[`big renders with id="TEST" 1`] = `
<big
  id="TEST"
/>
`;

exports[`big renders with inputMode="decimal" 1`] = `
<big
  inputMode="decimal"
/>
`;

exports[`big renders with inputMode="email" 1`] = `
<big
  inputMode="email"
/>
`;

exports[`big renders with inputMode="none" 1`] = `
<big
  inputMode="none"
/>
`;

exports[`big renders with inputMode="numeric" 1`] = `
<big
  inputMode="numeric"
/>
`;

exports[`big renders with inputMode="search" 1`] = `
<big
  inputMode="search"
/>
`;

exports[`big renders with inputMode="tel" 1`] = `
<big
  inputMode="tel"
/>
`;

exports[`big renders with inputMode="text" 1`] = `
<big
  inputMode="text"
/>
`;

exports[`big renders with inputMode="url" 1`] = `
<big
  inputMode="url"
/>
`;

exports[`big renders with is="foo" 1`] = `
<big
  is="foo"
/>
`;

exports[`big renders with itemID="https://google.com/" 1`] = `
<big
  itemID="https://google.com/"
/>
`;

exports[`big renders with itemProp="https://google.com/" 1`] = `
<big
  itemProp="https://google.com/"
/>
`;

exports[`big renders with itemRef="foo bar" 1`] = `
<big
  itemRef="foo bar"
/>
`;

exports[`big renders with itemScope="false" 1`] = `
<big
  itemScope={false}
/>
`;

exports[`big renders with itemScope="true" 1`] = `
<big
  itemScope={true}
/>
`;

exports[`big renders with itemType="https://google.com/" 1`] = `
<big
  itemType="https://google.com/"
/>
`;

exports[`big renders with lang="" 1`] = `
<big
  lang=""
/>
`;

exports[`big renders with lang="es-419" 1`] = `
<big
  lang="es-419"
/>
`;

exports[`big renders with slot="TEST" 1`] = `
<big
  slot="TEST"
/>
`;

exports[`big renders with spellCheck="false" 1`] = `
<big
  spellCheck="false"
/>
`;

exports[`big renders with spellCheck="true" 1`] = `
<big
  spellCheck="true"
/>
`;

exports[`big renders with style="[object Object]" 1`] = `
<big
  style={
    Object {
      "color": "#000000",
    }
  }
/>
`;

exports[`big renders with tabIndex="1" 1`] = `
<big
  tabIndex={1}
/>
`;

exports[`big renders with title="TEST" 1`] = `
<big
  title="TEST"
/>
`;

exports[`big renders with translate="no" 1`] = `
<big
  translate="no"
/>
`;

exports[`big renders with translate="yes" 1`] = `
<big
  translate="yes"
/>
`;

exports[`big renders without attributes 1`] = `<big />`;
